# cube-royale

./: Cargo.toml  index.html
src/: main.rs
src/app/: context.rs  hooks.rs  mod.rs
src/app/context/: mod.rs  reducer.rs
src/models/: cube_royale.rs  duration.rs  mod.rs  scramble.rs
src/models/player/: mod.rs  names.rs
src/players/: mod.rs  names.rs
src/scramble/: generator.rs  mod.rs
src/timer/: mod.rs
