[package]
name = "cube-royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.6.1"
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
